# Vacancy_application

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api_settings.py
tests/: conftest.py  test_json.py  test_main.py  test_vacancy.py
